# math-llm

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  TODO.md  main.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
config/: feedback-large.yaml  feedback-medium.yaml  feedback-small.yaml  feedback-xsmall.yaml  ssm-large.yaml  ssm-medium.yaml  ssm-small.yaml  standard-large-pope.yaml  standard-large-softmax1.yaml  standard-large.yaml  standard-medium-pope.yaml  standard-medium-softmax1.yaml  standard-medium.yaml  standard-small-pope-softmax1.yaml  standard-small-pope.yaml  standard-small-rope-preln-2L8H.yaml  standard-small-rope-preln.yaml  standard-small-rope.yaml  standard-small-sinusoidal.yaml  standard-small-softmax1.yaml  standard-small.yaml  standard-xsmall.yaml  universal-large.yaml  universal-medium.yaml  universal-small.yaml
notebooks/: attention_visualization.ipynb
reports/: kurtosis_comparison.md
scripts/: __init__.py  benchmark.py  benchmark_dataloader.py  compare_benchmarks.py  convert_data_format.py  count_duplicates.py  evaluate.py  generate_data.py  interactive.py  test_gumbel.py  trace_model.py  trace_ssm.py  train.py  visualize_attention.py
src/: __init__.py  activation_stats.py  config.py  data.py  generation.py  model.py  optimizers.py  ssm.py  tokenizer.py  training.py  types.py  utils.py
tests/: README.md  conftest.py  test_activation_stats.py  test_alibi.py  test_arithmetic_model.py  test_attention_optimization.py  test_attention_variants.py  test_compute_loss.py  test_compute_metrics.py  test_data.py  test_fixed_length_cot.py  test_generate_data.py  test_generation_snapshots.py  test_gumbel.py  test_model.py  test_model_factories.py  test_model_integration.py  test_reasoning_mask.py  test_ssm.py  test_tokenizer.py  test_trace_ssm.py  test_training_integration.py  test_transformer_block.py  test_universal_transformer.py
tests/__snapshots__/: test_generation_snapshots.ambr
traces/ssm-2digit/: summary.txt
traces/ssm-5digit/: summary.txt
traces/ssm-5digit-final/: summary.txt
traces/ssm-5digit-nocarry/: summary.txt
