[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math-llm"
version = "0.1.0"
description = "A minimal transformer model for learning basic arithmetic operations with chain-of-thought reasoning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "colorlog>=6.9.0",
    "datasets>=3.6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "bertviz>=1.4.0",
    "jupyterlab>=4.0.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "syrupy>=4.9.1",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.20.0",
]

[project.scripts]
math-llm-train = "scripts.train:main"
math-llm-evaluate = "scripts.evaluate:main"
math-llm-generate-data = "scripts.generate_data:main"
math-llm-interactive = "scripts.interactive:main"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as fast integration tests that require training (deselect with '-m \"not integration\"')",
    "slow_integration: marks tests as slow integration tests that train to convergence (deselect with '-m \"not slow_integration\"')",
]
# By default, exclude integration tests
addopts = "-m 'not integration and not slow_integration'"
